--- a/init.ipynb
+++ b/init.ipynb
@@ -2,100 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pymongo in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (4.4.1)\n",
-      "Requirement already satisfied: web3 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (6.7.0)\n",
-      "Requirement already satisfied: gensim in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (4.3.1)\n",
-      "Requirement already satisfied: dnspython<3.0.0,>=1.16.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from pymongo) (2.4.1)\n",
-      "Requirement already satisfied: websockets>=10.0.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from web3) (11.0.3)\n",
-      "Requirement already satisfied: lru-dict>=1.1.6 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from web3) (1.2.0)\n",
-      "Requirement already satisfied: eth-abi>=4.0.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from web3) (4.1.0)\n",
-      "Requirement already satisfied: pyunormalize>=15.0.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from web3) (15.0.0)\n",
-      "Requirement already satisfied: requests>=2.16.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from web3) (2.28.2)\n",
-      "Requirement already satisfied: protobuf>=4.21.6 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from web3) (4.23.4)\n",
-      "Requirement already satisfied: eth-account>=0.8.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from web3) (0.9.0)\n",
-      "Requirement already satisfied: eth-typing>=3.0.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from web3) (3.4.0)\n",
-      "Requirement already satisfied: aiohttp>=3.7.4.post0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from web3) (3.8.5)\n",
-      "Requirement already satisfied: jsonschema>=4.0.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from web3) (4.17.3)\n",
-      "Requirement already satisfied: eth-utils>=2.1.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from web3) (2.2.0)\n",
-      "Requirement already satisfied: eth-hash[pycryptodome]>=0.5.1 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from web3) (0.5.2)\n",
-      "Requirement already satisfied: hexbytes>=0.1.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from web3) (0.3.1)\n",
-      "Requirement already satisfied: typing-extensions>=4.0.1 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from web3) (4.5.0)\n",
-      "Requirement already satisfied: scipy>=1.7.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from gensim) (1.10.1)\n",
-      "Requirement already satisfied: numpy>=1.18.5 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from gensim) (1.24.2)\n",
-      "Requirement already satisfied: smart-open>=1.8.1 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from gensim) (6.3.0)\n",
-      "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from aiohttp>=3.7.4.post0->web3) (3.1.0)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from aiohttp>=3.7.4.post0->web3) (1.3.1)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from aiohttp>=3.7.4.post0->web3) (22.2.0)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from aiohttp>=3.7.4.post0->web3) (6.0.4)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from aiohttp>=3.7.4.post0->web3) (1.4.0)\n",
-      "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from aiohttp>=3.7.4.post0->web3) (4.0.2)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from aiohttp>=3.7.4.post0->web3) (1.9.2)\n",
-      "Requirement already satisfied: parsimonious<0.10.0,>=0.9.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from eth-abi>=4.0.0->web3) (0.9.0)\n",
-      "Requirement already satisfied: eth-rlp>=0.3.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from eth-account>=0.8.0->web3) (0.3.0)\n",
-      "Requirement already satisfied: bitarray>=2.4.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from eth-account>=0.8.0->web3) (2.8.0)\n",
-      "Requirement already satisfied: eth-keys>=0.4.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from eth-account>=0.8.0->web3) (0.4.0)\n",
-      "Requirement already satisfied: eth-keyfile>=0.6.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from eth-account>=0.8.0->web3) (0.6.1)\n",
-      "Requirement already satisfied: rlp>=1.0.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from eth-account>=0.8.0->web3) (3.0.0)\n",
-      "Requirement already satisfied: pycryptodome<4,>=3.6.6 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from eth-hash[pycryptodome]>=0.5.1->web3) (3.18.0)\n",
-      "Requirement already satisfied: cytoolz>=0.10.1 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from eth-utils>=2.1.0->web3) (0.12.2)\n",
-      "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from jsonschema>=4.0.0->web3) (0.19.3)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from requests>=2.16.0->web3) (1.26.15)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from requests>=2.16.0->web3) (3.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from requests>=2.16.0->web3) (2022.12.7)\n",
-      "Requirement already satisfied: toolz>=0.8.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from cytoolz>=0.10.1->eth-utils>=2.1.0->web3) (0.12.0)\n",
-      "Requirement already satisfied: regex>=2022.3.15 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from parsimonious<0.10.0,>=0.9.0->eth-abi>=4.0.0->web3) (2023.3.23)\n",
-      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 23.2.1 is available.\n",
-      "You should consider upgrading via the '/home/seankhatiri/sean2/venv/bin/python -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install pymongo web3 gensim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: tqdm in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (4.65.0)\n",
-      "Requirement already satisfied: pandas in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (2.0.0)\n",
-      "Requirement already satisfied: pyarrow in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (12.0.1)\n",
-      "Requirement already satisfied: scikit-learn in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (1.2.2)\n",
-      "Requirement already satisfied: scikit-surprise in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (1.1.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: numpy>=1.20.3 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from pandas) (1.24.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from scikit-learn) (3.1.0)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from scikit-learn) (1.2.0)\n",
-      "Requirement already satisfied: scipy>=1.3.2 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from scikit-learn) (1.10.1)\n",
-      "Requirement already satisfied: six>=1.5 in /home/seankhatiri/sean2/venv/lib/python3.9/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 23.2.1 is available.\n",
-      "You should consider upgrading via the '/home/seankhatiri/sean2/venv/bin/python -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pip install tqdm pandas pyarrow scikit-learn scikit-surprise"
+    "pip install tqdm pandas pyarrow scikit-learn scikit-surprise mlxtend"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,6 +46,7 @@
     "from surprise import KNNBasic\n",
     "from surprise import Dataset, Reader\n",
     "from surprise.model_selection import cross_validate\n",
+    "from mlxtend.frequent_patterns import apriori, association_rules\n",
     "# from pymongo import MongoClient"
    ]
   },
@@ -1245,52 +1171,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Evaluating RMSE, MAE of algorithm KNNBasic on 5 split(s).\n",
-      "\n",
-      "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
-      "RMSE (testset)    0.0000  0.0000  0.0000  0.0000  0.0000  0.0000  0.0000  \n",
-      "MAE (testset)     0.0000  0.0000  0.0000  0.0000  0.0000  0.0000  0.0000  \n",
-      "Fit time          3.77    3.19    3.20    3.22    3.28    3.33    0.22    \n",
-      "Test time         14.68   15.03   15.16   15.68   15.08   15.13   0.32    \n"
+      "1004696\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'test_rmse': array([0., 0., 0., 0., 0.]),\n",
-       " 'test_mae': array([0., 0., 0., 0., 0.]),\n",
-       " 'fit_time': (3.7741055488586426,\n",
-       "  3.18632435798645,\n",
-       "  3.1986637115478516,\n",
-       "  3.2223265171051025,\n",
-       "  3.2834548950195312),\n",
-       " 'test_time': (14.676252365112305,\n",
-       "  15.031543493270874,\n",
-       "  15.16137981414795,\n",
-       "  15.68039345741272,\n",
-       "  15.07863974571228)}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1301,7 +1190,7 @@
     "\n",
     "# Load the data from your csv file\n",
     "df = pd.read_csv('dataset/adj_matrix.csv')\n",
-    "df = df[:1000]\n",
+    "df = df[:50651]\n",
     "\n",
     "# Preprocess the dataframe\n",
     "# Flatten the dataframe and create interaction matrix\n",
@@ -1330,7 +1219,17 @@
     "\n",
     "# Run 5-fold cross-validation and print results\n",
     "cross_validate(algo, data, measures=['RMSE', 'MAE'], cv=5, verbose=True)\n",
-    "\n"
+    "\n",
+    "#The cf-recommender is running in tmux cf_recommender\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use LDA topic modeling, but this time just run that on contracts comments"
    ]
   }
  ],
