--- a/init.ipynb
+++ b/init.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1009,7 @@
     "        tag_int = tag_mapping[tag]\n",
     "        col_name = df.columns[df.loc[user_address, :] == -1][0]\n",
     "        df.loc[user_address, col_name] = tag_int\n",
-    "        \n",
+    "\n",
     "    if tx_from in contract_dict and tx_to in eoa_addresses:\n",
     "        user_address = tx_to\n",
     "        contract_address = tx_from\n",
@@ -1018,7 +1018,7 @@
     "        col_name = df.columns[df.loc[user_address, :] == -1][0]\n",
     "        df.loc[user_address, col_name] = tag_int\n",
     "    \n",
-    "df.to_csv('dataset/adj_matrix.csv', index=True)"
+    "df.to_csv('dataset/adj_matrix_kmean_tags.csv', index=True)"
    ]
   },
   {
@@ -1273,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,33 +1291,19 @@
     "            data = json.load(json_file)\n",
     "            contract_name = data.get('ContractName')\n",
     "            contract_names.append(contract_name)\n",
-    "temp_df = pd.DataFrame({'contract_address': contract_addresses, 'contract_name': contract_names})\n",
-    "df.to_csv('dataset/contract_addresses_with_name.csv', index=False)\n"
+    "df_contract_addresses_with_name = pd.DataFrame({'contract_address': contract_addresses, 'contract_name': contract_names})\n",
+    "# temp_df.to_csv('dataset/contract_addresses_with_name.csv', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'append'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/0g/2h0d69mn2nd69nkf32grwsdr0000gn/T/ipykernel_77558/2495872414.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0;31m######################## TAG CONTRACTS BY TRAINED LDA #######################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;31m#TODO\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mformat_topics_sentences\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mldamodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcorpus\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtexts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0;31m# Init output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/0g/2h0d69mn2nd69nkf32grwsdr0000gn/T/ipykernel_77558/2495872414.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(ldamodel, corpus, texts)\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtopic_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprop_topic\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mj\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# => dominant topic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m                 \u001b[0mwp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mldamodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow_topic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtopic_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m                 \u001b[0mtopic_keywords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\", \"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mword\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprop\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mwp\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m                 \u001b[0msent_topics_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msent_topics_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtopic_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprop_topic\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopic_keywords\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0msent_topics_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'Dominant_Topic'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Perc_Contribution'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Topic_Keywords'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.pyenv/versions/3.9.16/lib/python3.9/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5985\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5986\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5987\u001b[0m         ):\n\u001b[1;32m   5988\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5989\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'append'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "######################## TAG CONTRACTS BY TRAINED LDA #######################\n",
     "#TODO: Fix ths bug \n",
-    "\n",
+    " \n",
     "def format_topics_sentences(ldamodel, corpus, texts):\n",
     "    # Init output\n",
     "    sent_topics_df = pd.DataFrame()\n",
@@ -1360,6 +1346,202 @@
    "outputs": [],
    "source": [
     "#TODO: CREATE new adj_matrix with topic modeling tagging, re-run CF recommender and compare result with Kmean tagging model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7214791\n",
+      "51626\n",
+      "254251\n",
+      "202625\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Since we have bag of item interactions, in cf we don’t consider the order of interactions, so we are considering them as a bag of \n",
+    "word model, so definitely graph which have the order or flow of user interactions in each tx can carry this important information, \n",
+    "besides graph has better interpretibility. \n",
+    "Note: we map any num of interactions (>1) to 1 in our user-item matrix\n",
+    "In terms of recommendation formulation, we can recommend too-5 contract based on user 40% of previous tx in test set \n",
+    "(model should not see this users or can see 20% of them, then based on recommendation we can calculate MPA@k to see the top-k \n",
+    "recommended involve how many actually interacted contracts from ALL users previous interacted contracts\n",
+    "'''\n",
+    "\n",
+    "#TODO: from user_tx dataset create the adj_matrix of eoa_addresses as rows and contract addresses (with contract_name) as columns\n",
+    "\n",
+    "contract_names = df_contract_addresses_with_name['contract_name'].unique()\n",
+    "contracts_with_names = df_contract_addresses_with_name['contract_address'].unique()\n",
+    "\n",
+    "\n",
+    "user_txs = pd.read_csv('dataset/user_transactions.csv')\n",
+    "contract_addresses = pd.read_csv('dataset/contract_addresses.csv')['address']\n",
+    "unique_addresses = pd.concat([user_txs['address'], user_txs['from'], user_txs['to']]).unique()\n",
+    "\n",
+    "contract_addresses_set = set(contract_addresses)\n",
+    "\n",
+    "contract_addresses_in_user_tx = [address for address in unique_addresses if address in contract_addresses_set]\n",
+    "eoa_addresses = [address for address in unique_addresses if address not in contract_addresses_set]\n",
+    "\n",
+    "\n",
+    "# Create a DataFrame with addresses as index and contract names as columns\n",
+    "df_adj_matrix_contract_names = pd.DataFrame(0, index=eoa_addresses, columns=contract_names)\n",
+    "df_adj_matrix_contract_names.index.name = 'address'\n",
+    "\n",
+    "print(len(contract_addresses))\n",
+    "print(len(contract_addresses_in_user_tx))\n",
+    "print(len(unique_addresses))\n",
+    "print(len(eoa_addresses))\n",
+    "\n",
+    "# for i, row in tqdm(user_txs.iterrows(), total=user_txs.shape[0]):\n",
+    "for i, row in user_txs.iterrows():\n",
+    "    tx_from = row['from']\n",
+    "    tx_to = row['to']\n",
+    "    if tx_from in eoa_addresses and tx_to in contract_addresses_in_user_tx:\n",
+    "        user_address = tx_from\n",
+    "        contract_address = tx_to\n",
+    "        # if user_address == eoa_addresses[101]: break\n",
+    "        if contract_address in contracts_with_names:\n",
+    "            col_name = df_contract_addresses_with_name.loc[df_contract_addresses_with_name['contract_address'] == contract_address, 'contract_name'].values[0]\n",
+    "            df_adj_matrix_contract_names.loc[user_address, col_name] = 1\n",
+    "\n",
+    "    if tx_from in contract_addresses_in_user_tx and tx_to in eoa_addresses:\n",
+    "        user_address = tx_to\n",
+    "        contract_address = tx_from\n",
+    "        # if user_address == eoa_addresses[101]: break\n",
+    "        if contract_address in contracts_with_names:\n",
+    "            col_name = df_contract_addresses_with_name.loc[df_contract_addresses_with_name['contract_address'] == contract_address, 'contract_name'].values[0]\n",
+    "            df_adj_matrix_contract_names.loc[user_address, col_name] = 1\n",
+    "    \n",
+    "df_adj_matrix_contract_names.to_parquet('dataset/adj_matrix_contract_names.parquet', index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['user', 'item', 'rating'], dtype='object')\n",
+      "3\n",
+      "                                          user                         item  \\\n",
+      "0   0xc23d11e5ae70a680f6f3e278503007dbae4b868c                  TetherToken   \n",
+      "1   0x365782e192de5abdd3183da25d2e94a2641a616d  TransparentUpgradeableProxy   \n",
+      "2   0x365782e192de5abdd3183da25d2e94a2641a616d                  BridgeToken   \n",
+      "3   0x365782e192de5abdd3183da25d2e94a2641a616d                        Token   \n",
+      "4   0x365782e192de5abdd3183da25d2e94a2641a616d                      Seaport   \n",
+      "5   0x365782e192de5abdd3183da25d2e94a2641a616d       ETHRegistrarController   \n",
+      "6   0x365782e192de5abdd3183da25d2e94a2641a616d  BaseRegistrarImplementation   \n",
+      "7   0x365782e192de5abdd3183da25d2e94a2641a616d                     MetaSwap   \n",
+      "8   0x365782e192de5abdd3183da25d2e94a2641a616d             DigitalBitsToken   \n",
+      "9   0x365782e192de5abdd3183da25d2e94a2641a616d                 SwapRouter02   \n",
+      "10  0x365782e192de5abdd3183da25d2e94a2641a616d                    ERC20Vinu   \n",
+      "\n",
+      "    rating  \n",
+      "0        1  \n",
+      "1        1  \n",
+      "2        1  \n",
+      "3        1  \n",
+      "4        1  \n",
+      "5        1  \n",
+      "6        1  \n",
+      "7        1  \n",
+      "8        1  \n",
+      "9        1  \n",
+      "10       1  \n"
+     ]
+    }
+   ],
+   "source": [
+    "def data_loader(adj_matrix_path, format):\n",
+    "    df = pd.read_csv(adj_matrix_path + format) if format == '.csv' else pd.read_parquet(adj_matrix_path + format)\n",
+    "    df = df[:2]\n",
+    "    data = []\n",
+    "\n",
+    "    if adj_matrix_path == 'dataset/adj_matrix_kmean_tags':\n",
+    "        for i, row in df.iterrows():\n",
+    "            for j in range(1, 51):\n",
+    "                if row[j] != -1:\n",
+    "                    data.append([row[0], row[j], 1])  # if an interaction exists, rate it as 1\n",
+    "    \n",
+    "    if adj_matrix_path == 'dataset/adj_matrix_contract_names':\n",
+    "        for i, row in df.iterrows():\n",
+    "            for j in range(1, len(df.columns)):\n",
+    "                if row[j] != 0:\n",
+    "                    data.append([row.name, df.columns[j], 1])\n",
+    "\n",
+    "    data = pd.DataFrame(data, columns=['user', 'item', 'rating'])\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "\n",
+    "# data = data_loader('dataset/adj_matrix_kmean_tags', '.csv')\n",
+    "data = data_loader('dataset/adj_matrix_contract_names', '.parquet')\n",
+    "print(data.columns)\n",
+    "print(len(data.columns))\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62\n",
+      "101\n",
+      "101\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in 1500 users, how many of them has interaction with more than 0 or 1 contract?\n",
+    "# 936\n",
+    "contract_calls = []\n",
+    "\n",
+    "counter = 0\n",
+    "for i, row in df_adj_matrix_contract_names.iterrows():\n",
+    "    counter = counter + 1\n",
+    "    cells_equal_to_1 = row[row == 1]\n",
+    "    contract_calls.append(len(cells_equal_to_1))\n",
+    "    # if counter == 1500: break\n",
+    "\n",
+    "calls_more_than_1 = [call for call in contract_calls if call > 1]\n",
+    "\n",
+    "print(len(calls_more_than_1))\n",
+    "print(len(contract_calls))\n",
+    "print(len(df_adj_matrix_contract_names))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matrix factorization, such as Singular Value Decomposition (SVD) used in collaborative filtering (CF), doesn't have a strict \"best practice\" users-to-items ratio. The primary consideration is usually the sparsity of the matrix rather than the ratio of users to items. The more ratings (or interactions) you have relative to the total possible ratings, the better the matrix factorization method tends to perform.\n",
+    "\n",
+    "That said, there are some practical considerations and implications:\n",
+    "\n",
+    "Computational Complexity: Matrix factorization can be computationally intensive. The larger your user-item matrix, the more resources and time you'll need to factorize it. Depending on the available computational power, you might need to sample or use dimensionality reduction.\n",
+    "Sparsity: As mentioned, sparsity is a significant concern. If your matrix is too sparse (i.e., very few ratings/interactions relative to the total number of possible ratings), matrix factorization might perform poorly or overfit to the few available interactions. Incorporating regularization can help with this.\n",
+    "Cold Start Problem: If you have many items with very few or no ratings, you'll face the cold start problem, where it's challenging to make recommendations for these items. The same goes for new users with few or no interactions.\n",
+    "Sampling: If you decide to sample, consider the implications. For instance, if you only sample popular items, your recommender might become biased towards these items. It might be more useful to sample users since user preferences can often be inferred from a subset of users. Still, it's essential to ensure the sampled user set is representative.\n",
+    "Hybrid Approaches: If you find matrix factorization isn't performing well due to high sparsity or other issues, consider hybrid recommendation approaches. These methods combine collaborative filtering with content-based filtering, leveraging item or user attributes to improve recommendations.\n",
+    "Iterative Approaches: There are iterative matrix factorization methods, such as stochastic gradient descent (SGD) based matrix factorization, which can scale better with larger matrices.\n",
+    "Alternatives: There are other scalable collaborative filtering algorithms, like nearest neighbor methods using locality-sensitive hashing (LSH) or neural network-based recommenders, which can handle large matrices more gracefully.\n"
    ]
   }
  ],
