--- a/init.ipynb
+++ b/init.ipynb
@@ -6,14 +6,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install tqdm pandas pyarrow scikit-learn scikit-surprise mlxtend pymongo web3 gensim matplotlib neo4j"
+    "pip install tqdm pandas pyarrow scikit-learn scikit-surprise mlxtend pymongo web3 gensim matplotlib neo4j torch_geometric"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/seankhatiri/sean2/venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from tqdm import tqdm\n",
@@ -42,6 +51,13 @@
     "from mlxtend.frequent_patterns import apriori, association_rules\n",
     "from neo4j import GraphDatabase\n",
     "import re\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "from torch_geometric.data import Data\n",
+    "import torch\n",
+    "from torch_geometric.nn import GCNConv\n",
+    "import torch.nn.functional as F\n",
     "# from pymongo import MongoClient"
    ]
   },
@@ -1420,18 +1436,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average Precision: 0.1418240614893758\n",
-      "Average Recall: 0.2610141225726914\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "############# RUNNING BASELINE RECOMMENDERS ###############\n",
     "\n",
@@ -1541,7 +1548,7 @@
     "# print(f'Popularity Precision@{k}: {sum(prec for prec in precisions.values()) / len(precisions)}')\n",
     "# print(f'Popularity Recall@{k}: {sum(rec for rec in recalls.values()) / len(recalls)}')\n",
     "\n",
-    "k = 5\n",
+    "k = 10\n",
     "top_k_global = data.groupby('item')['rating'].sum().sort_values(ascending=False).head(k).index.tolist()\n",
     "precisions = []\n",
     "recalls = []\n",
@@ -1560,89 +1567,6 @@
     "\n",
     "print(\"Average Precision:\", avg_precision)\n",
     "print(\"Average Recall:\", avg_recall)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "########### FUNC NAMES EXPLORATORY ANALYSIS ############\n",
-    "\n",
-    "df = pd.read_csv(\"dataset/user_transactions.csv\")\n",
-    "unique_function_names = df['functionName'].nunique()\n",
-    "print(f\"Number of unique function names: {unique_function_names}\")\n",
-    "function_name_counts = df['functionName'].value_counts()\n",
-    "\n",
-    "plt.figure(figsize=(10,6))\n",
-    "function_name_counts.hist(bins=50, edgecolor=\"k\", alpha=0.7)\n",
-    "plt.title(\"Histogram of functionName repeats\")\n",
-    "plt.xlabel(\"Number of repeats\")\n",
-    "plt.ylabel(\"Number of functionNames\")\n",
-    "plt.grid(False)\n",
-    "plt.show()\n",
-    "\n",
-    "# Sort the function_name_counts dictionary in descending order\n",
-    "sorted_functions = sorted(function_name_counts.items(), key=lambda x: x[1], reverse=True)\n",
-    "top_10_functions = sorted_functions[:10]\n",
-    "for function_name, count in top_10_functions:\n",
-    "    print(function_name, count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "########### TRANSACTION GRAPH ############\n",
-    "# Read datasets\n",
-    "transactions = pd.read_csv('dataset/user_transactions.csv')\n",
-    "contract_addresses = pd.read_csv('dataset/contract_addresses.csv').address.tolist()\n",
-    "transactions = transactions[:1000]\n",
-    "\n",
-    "print(\"txs and contracts loaded\")\n",
-    "# Neo4j connection setup\n",
-    "uri = \"bolt://localhost:8092\"  # default connection URI for local Neo4j\n",
-    "username = \"neo4j\"\n",
-    "password = \"uWBOzDTQLXJLiFFF\"\n",
-    "driver = GraphDatabase.driver(uri, auth=(username, password))\n",
-    "\n",
-    "def sanitize_function_name(name):\n",
-    "    # Replace any non-alphanumeric character with an underscore\n",
-    "    sanitized_name = re.sub(r'\\W+', '_', name)\n",
-    "    \n",
-    "    # Ensure it starts with a letter\n",
-    "    if not sanitized_name[0].isalpha():\n",
-    "        sanitized_name = 'F_' + sanitized_name\n",
-    "\n",
-    "    return sanitized_name\n",
-    "\n",
-    "def create_transaction(tx, row):\n",
-    "    # Check if 'from' and 'to' addresses are contracts or users\n",
-    "    from_type = 'Contract' if row['from'] in contract_addresses else 'User'\n",
-    "    to_type = 'Contract' if row['to'] in contract_addresses else 'User'\n",
-    "\n",
-    "    # Check if functionName is empty or NaN\n",
-    "    raw_func_name = row['functionName'] if pd.notna(row['functionName']) and row['functionName'] != '' else 'UNKNOWN'\n",
-    "    func_name = sanitize_function_name(raw_func_name)\n",
-    "    \n",
-    "    # Cypher query\n",
-    "    #TODO: when creating contract nodes, find it's name and add as node feature, then going to contract level we can have custom generated tag from contract content\n",
-    "    query = (\n",
-    "        f\"MERGE (a:{from_type} {{address: $from_address}}) \"\n",
-    "        f\"MERGE (b:{to_type} {{address: $to_address}}) \"\n",
-    "        f\"CREATE (a)-[r:{func_name} {{input: $input, timeStamp: $timeStamp}}]->(b)\"\n",
-    "    )\n",
-    "    tx.run(query, from_address=row['from'], to_address=row['to'], input=row['input'], timeStamp=row['timeStamp'])\n",
-    "\n",
-    "# Execute transaction for each row in the transactions dataframe\n",
-    "with driver.session() as session:\n",
-    "    for _, row in tqdm(transactions.iterrows()):\n",
-    "        session.write_transaction(create_transaction, row)\n",
-    "\n",
-    "driver.close()"
    ]
   },
   {
@@ -1676,7 +1600,7 @@
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
-    "<!-- ![image-2.png](attachment:image-2.png) -->\n"
+    "![image-2.png](attachment:image-2.png)\n"
    ]
   },
   {
@@ -1791,7 +1715,7 @@
     "\n",
     "\n",
     "\n",
-    "# Association Rules Mining\n",
+    "# Rule-based recommenders\n",
     "\n",
     "The result for running Association Rules on the same dataset is as follows:\n",
     "to determine the support_treshhold, first we need to have a better understanding of our user-item interactions matrix sparcity, for a 500 user-item interactions set we have 0.0043 as matrix sparcity, so we choosed 0.1 as support treshhold which gave us the following percision and recall:\n",
@@ -1846,28 +1770,6 @@
     "https://ceur-ws.org/Vol-3031/paper_6.pdf\n",
     "\n",
     "https://explainablerecsys.github.io/recsys2022/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Create a system design architecture of all steps (DONE)\n",
-    "# BUGFIX: Revise the user-item-rating dataset to add num of interactions with a contract instead of returning always 1 (DONE)\n",
-    "# TODO: add recall, percision eval for CF recommender (DONE)\n",
-    "# TODO: Add another baseline to return popular items as recommended items (DONE)\n",
-    "# TODO: Add custom data loader to graph recommender (check how we can fetch the internal transactions, maybe we can skip that, if not add custom node processor and edge processor) (DONE)\n",
-    "# TODO: For topic modeling run the coherent k approach to find the best K for the dataset\n",
-    "# TODO: Run the LDA topic modeling inference to tag all the contracts -> then run the CF for user-tag interaction\n",
-    "\n",
-    "# TODO: Find the paper in which demonstrate recommending by news name is much more effective than news body embedding\n",
-    "# TODO: Add another tagging approach and run CF as a new baseline: search for established category top-5 keyword and assign the most similar category to each contract\n",
-    "# TODO: Run an of-the-shelv GNN on our graph\n",
-    "# TODO: Improve the node or edge embedding, or add some data masssaging to have a better evaluation (MAP@K)\n",
-    "# BUGFIX: We have lots of -1 in kmean-tags adj_matrix, find why and fix it\n",
-    "\n"
    ]
   }
  ],
